# claude-code-local-mlx

./: LICENSE  README.md  pyproject.toml
src/claude_local/: cli.py
