[project]
name = "claude-local"
version = "0.1.0"
description = "Run Claude Code against a local MLX model via claude-code-mlx-proxy"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
claude-local = "claude_local.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_local"]
